--- a/projectie/pom.xml
+++ b/projectie/pom.xml
@@ -42,6 +42,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
+                    <systemProperties> <MAVEN_OPTS>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8010</MAVEN_OPTS></systemProperties>
                     <port>8888</port>
                     <path>/</path>
                 </configuration>
